--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -13,30 +13,36 @@ jobs:
       - name: Depoyu indir
         uses: actions/checkout@v4
 
+      - name: Sistem bağımlılıklarını kur
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libcairo2-dev \
+            libgirepository1.0-dev \
+            pkg-config \
+            python3-dev \
+            libjpeg-dev \
+            libpng-dev \
+            libtiff-dev \
+            gcc \
+            g++
+          # Android SDK için gerekli
+          sudo apt-get install -y \
+            android-sdk \
+            gradle
+
       - name: Python kur
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: Dizin yapısını kontrol et
-        run: |
-          pwd
-          ls -la
-          ls -la anna/ || echo "anna klasörü yok"
-          
       - name: Bağımlılıkları kur
         run: |
           pip install --upgrade pip
           pip install briefcase toga
-          # requirements.txt nerede diye kontrol et
-          if [ -f anna/requirements.txt ]; then
-            pip install -r anna/requirements.txt
-          elif [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          else
-            echo "requirements.txt bulunamadı!"
-            exit 1
-          fi
+          # Sistem kütüphanelerini bulsun diye
+          export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:$PKG_CONFIG_PATH
+          pip install -r requirements.txt
 
       - name: APK build et
         run: |
@@ -45,7 +51,7 @@ jobs:
           briefcase build android
 
       - name: APK'yı yükle
-        uses: actions/upload-artifact@v4   # <-- SADECE BURASI DEĞİŞTİ
+        uses: actions/upload-artifact@v4
         if: success()
         with:
           name: ANNA-Mobil-APK
