--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,13 @@ author_email = "nihaikapibukucu@gmail.com"
 
 [tool.briefcase.app.anna]
 formal_name = "ANNA Mobil"
-description = "A.N.N.A Mobil Asistan - Sesli komut ve AR özellikli"
+description = "A.N.N.A Mobil Asistan - Sesli komut ve sohbet asistanı"
 long_description = """
 A.N.N.A (Adaptif Nöro-Network Asistanı) mobil versiyonu.
 - Sesli komut ile kontrol
-- AR nesne tanıma
-- QR kod okuma
-- Yüz ve el tespiti
 - Sohbet asistanı
+- QR kod okuma
+- Günlük hatırlatıcılar
 """
 
 sources = [
@@ -28,26 +27,20 @@ test_sources = [
 ]
 
 # ============================================
-# ÖNEMLİ: GEREKLİ PAKETLER BURAYA EKLENDİ!
+# GEREKLİ PAKETLER (MEDIAPIPE'SİZ)
 # ============================================
 requires = [
     "toga~=0.5.0",
     "edge-tts==7.2.7",
     "SpeechRecognition==3.14.5",
     "gTTS==2.5.4",
-    "mediapipe==0.10.32",
-    "numpy==2.4.2",
-    "pyzbar==0.1.9",
-    "psutil==7.2.2",
-    "python-dotenv==1.2.1",
+    "pyzbar==0.1.9",          # QR okuma (saf Python, Android'de çalışır)
     "loguru==0.7.3",
+    "python-dotenv==1.2.1",
+    "requests==2.32.5",
     "certifi==2026.1.4",
-    "chardet==5.2.0",
-    "charset-normalizer==3.4.4",
     "idna==3.11",
     "urllib3==2.6.3",
-    "requests==2.32.5",
-    "packaging==26.0",
 ]
 
 test_requires = [
