--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-# requirements.txt - Sadece Android için gerekli olanlar
+# Android için gerekenler
 toga-android==0.5.0
-edge-tts==7.2.7
-SpeechRecognition==3.14.5
 gTTS==2.5.4
-pyzbar==0.1.9
+SpeechRecognition==3.14.5
 loguru==0.7.3
 python-dotenv==1.2.1
 requests==2.32.5
 certifi==2026.1.4
 idna==3.11
 urllib3==2.6.3
+pyzbar==0.1.9        # QR okuma (isteğe bağlı)
