--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-  workflow_dispatch:  # Manuel tetikleme için
+  workflow_dispatch:
 
 jobs:
   build:
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'  # Flet ile en uyumlu sürüm
+          python-version: '3.11'
           
       - name: Setup Java
         uses: actions/setup-java@v4
@@ -29,32 +29,33 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.3'  # Flet 0.22.0 ile uyumlu
+          flutter-version: '3.24.3'
           channel: 'stable'
           
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install flet==0.22.0  # Stabil sürümü zorla
+          # pyproject.toml'daki bağımlılıkları da yükle
+          pip install flet==0.22.0 python-dotenv requests pillow cryptography
           
       - name: Create .env file from secrets
         run: |
           cat > .env << EOF
-          # API Anahtarları (GitHub Secrets'ten alınır)
+          # API Anahtarları (GitHub Secrets'tan alınır)
           GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
           GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
           OPENWEATHER_API_KEY=${{ secrets.OPENWEATHER_API_KEY }}
           NEWS_API_KEY=${{ secrets.NEWS_API_KEY }}
           
-          # Uygulama Ayarları
-          APP_NAME="A.N.N.A"
-          APP_VERSION=1.0.0
-          DEBUG=False
-          
           # Güvenlik
           SECRET_KEY=${{ secrets.SECRET_KEY }}
           ENCRYPTION_SALT=${{ secrets.ENCRYPTION_SALT }}
+          
+          # Uygulama Ayarları
+          APP_NAME="A.N.N.A"
+          APP_VERSION=0.4.0
+          DEBUG=False
           
           # Sesli Asistan
           WAKE_WORD="jarvis"
@@ -63,29 +64,29 @@ jobs:
           
       - name: Verify .env file
         run: |
-          echo ".env dosyası oluşturuldu (gizli anahtarlar gizlendi)"
-          cat .env | grep -v "API_KEY\|SECRET\|SALT"  # Sadece güvenli satırları göster
+          echo "✅ .env dosyası oluşturuldu"
+          echo "📋 İçerik (gizli anahtarlar gizlendi):"
+          cat .env | grep -v "API_KEY\|SECRET\|SALT" || true
           
-      - name: Build APK
+      - name: Build APK (Flet 0.22.0)
         run: |
-          flet build apk \
-            --name "A.N.N.A" \
-            --package-name "com.anna.mobile" \
-            --product "ANNA" \
-            --org "com.anna" \
-            --company "ANNA" \
-            --description "Adaptive Nöro Network Asistanı Mobil" \
-            --copyright "2026" \
+          # pyproject.toml'daki ayarları otomatik kullanır
+          flet build apk . \
             --build-number ${{ github.run_number }} \
-            --build-version "0.4.${{ github.run_number }}" \
-            --include-packages "flet,path,dotenv,requests"
-            
+            --build-version "0.4.${{ github.run_number }}"
+          
+      - name: List build directory
+        run: |
+          echo "📁 Build dizini içeriği:"
+          ls -la build/apk/ || echo "⚠️ APK bulunamadı"
+          
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
           name: ANNA-Mobile-v0.4-${{ github.run_number }}
           path: build/apk/*.apk
           retention-days: 30
+          if-no-files-found: error
           
       - name: Create Release (on tag push)
         if: startsWith(github.ref, 'refs/tags/')
