--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -3,22 +3,26 @@ name: Build ANNA Mobile APK
 on:
   push:
     branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'APK Versiyonu'
+        required: false
+        default: '0.4'
+        type: string
 
 jobs:
   build:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Python
+      - uses: actions/checkout@v4
+      
+      - name: Setup Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+          cache: 'pip'  # Otomatik cache
           
       - name: Setup Java
         uses: actions/setup-java@v4
@@ -31,69 +35,77 @@ jobs:
         with:
           flutter-version: '3.24.3'
           channel: 'stable'
+          cache: true
           
-      - name: Install dependencies
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libgl1-mesa-glx \
+            libglib2.0-0 \
+            libsm6 \
+            libxext6 \
+            libxrender-dev \
+            libgomp1 \
+            tesseract-ocr \
+            tesseract-ocr-tur \
+            portaudio19-dev \
+            libsndfile1 \
+            libsdl2-dev \
+            cmake \
+            ninja-build \
+            pkg-config
+          
+      - name: Cache pip packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          sed -i '/^#/d' requirements.txt
-          sed -i '/^$/d' requirements.txt
-          # Sadece temiz paketleri yükle
+          pip install setuptools wheel
+          # NumPy'i önce yükle (bağımlılık sırası önemli)
+          pip install numpy==1.24.3
+          # Diğer paketleri yükle
           pip install -r requirements.txt
-          # pyproject.toml'daki bağımlılıkları da yükle
-          pip install flet==0.22.0 python-dotenv requests pillow cryptography
           
       - name: Create .env file from secrets
         run: |
           cat > .env << EOF
-          # API Anahtarları (GitHub Secrets'tan alınır)
           GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
           GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
           OPENWEATHER_API_KEY=${{ secrets.OPENWEATHER_API_KEY }}
           NEWS_API_KEY=${{ secrets.NEWS_API_KEY }}
-          
-          # Güvenlik
-          SECRET_KEY=${{ secrets.SECRET_KEY }}
-          ENCRYPTION_SALT=${{ secrets.ENCRYPTION_SALT }}
-          
-          # Uygulama Ayarları
-          APP_NAME="A.N.N.A"
-          APP_VERSION=0.4.0
-          DEBUG=False
-          
-          # Sesli Asistan
-          WAKE_WORD="jarvis"
-          VOICE_LANG="tr-TR"
+          PICOVOICE_ACCESS_KEY=${{ secrets.PICOVOICE_ACCESS_KEY }}
           EOF
           
-      - name: Verify .env file
+      - name: Verify Flutter & Flet
         run: |
-          echo "✅ .env dosyası oluşturuldu"
-          echo "📋 İçerik (gizli anahtarlar gizlendi):"
-          cat .env | grep -v "API_KEY\|SECRET\|SALT" || true
+          flutter doctor
+          pip show flet
           
-      - name: Build APK (Flet 0.22.0)
+      - name: Build APK
         run: |
-          # pyproject.toml'daki ayarları otomatik kullanır
           flet build apk . \
             --build-number ${{ github.run_number }} \
-            --build-version "0.4.${{ github.run_number }}"
+            --build-version "${{ github.event.inputs.version || '0.4' }}.${{ github.run_number }}"
           
-      - name: List build directory
-        run: |
-          echo "📁 Build dizini içeriği:"
-          ls -la build/apk/ || echo "⚠️ APK bulunamadı"
-          
-      - name: Upload APK Artifact
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: ANNA-Mobile-v0.4-${{ github.run_number }}
+          name: ANNA-Mobile-${{ github.event.inputs.version || '0.4' }}.${{ github.run_number }}
           path: build/apk/*.apk
           retention-days: 30
-          if-no-files-found: error
           
-      - name: Create Release (on tag push)
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v2
+      - name: Create Release
+        if: github.ref == 'refs/heads/main'
+        uses: softprops/action-gh-release@v1
         with:
+          tag_name: v${{ github.event.inputs.version || '0.4' }}.${{ github.run_number }}
+          name: A.N.N.A Mobile v${{ github.event.inputs.version || '0.4' }}.${{ github.run_number }}
           files: build/apk/*.apk
           generate_release_notes: true
